force-app/main/default/objects/Spendly_Settings__c/Spendly_Settings__c.object-meta.xml
<CustomObject>
    <label>Spendly Settings</label>
    <nameField>
        <label>Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spendly Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>