force-app/main/default/objects/Spendly_Settings__c/fields/Global_Recurring_Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Global_Recurring_Run_Time__c</fullName>
    <description>Daily time when global recurring expense generation should run.</description>
    <label>Global Recurring Run Time</label>
    <type>Time</type>
</CustomField>