force-app/main/default/objects/Spendly_Settings__c/fields/Last_Recurring_Run_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Recurring_Run_DateTime__c</fullName>
    <label>Last Recurring Run Date/Time</label>
    <type>DateTime</type>
</CustomField>