force-app/main/default/objects/Spendly_Settings__c/fields/Last_Recurring_Run_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Recurring_Run_Message__c</fullName>
    <label>Last Recurring Run Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>