force-app/main/default/objects/Spendly_Settings__c/fields/Last_Recurring_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Recurring_Run_Status__c</fullName>
    <label>Last Recurring Run Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>