force-app/main/default/objects/Spendly_Settings__c/fields/Recurring_Expenses_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Expenses_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Recurring Expenses Enabled</label>
    <type>Checkbox</type>
</CustomField>